--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <header>
         <nav id="navbar">
             <ul>
-                <li><a class="nav-link" href="#welcome-section">About me</a></li>
-                <li><a class="nav-link" href="#projects">Works</a></li>
-                <li><a class="nav-link" href="#contacto">Contact</a></li>
+                <li><a class="nav-link" href="#welcome-section">Sobre mi</a></li>
+                <li><a class="nav-link" href="#projects">Trabajos</a></li>
+                <li><a class="nav-link" href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </header>
